# kreuzberg

./: .dockerignore  .gh-actions-updater.toml  .gitattributes  .gitignore  .hadolint.yaml  .lychee.toml  .oxfmtrc.json  .pre-commit-config.yaml  .textlintrc.json  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLATFORM_SUPPORT.md  Package.swift  README.md  SECURITY.md  SESSION_4_IMPLEMENTATION_SUMMARY.md  THIRD_PARTY_LICENSES.md  Taskfile.yaml  Taskfile.yml  ai-rulez.yaml  alef.toml  basemind.toml  biome.json  composer.json  cycle-5-alef-queue.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pom.xml  pyproject.toml  server.json  tsconfig.json  zensical.toml
.ai-rulez/: .generated-manifest.json  config.toml  config.yaml
.ai-rulez/context/: wasm-constraints.md
.ai-rulez/rules/: basemind-usage.md  feature-flag-policy.md
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yaml
.github/workflows/: benchmarks.yaml  build-artifacts.yaml  ci-csharp.yaml  ci-docker.yaml  ci-docs.yaml  ci-e2e.yaml  ci-elixir.yaml  ci-go.yaml  ci-gpu.yaml  ci-integrations.yaml  ci-java.yaml  ci-lint.yaml  ci-mobile.yaml  ci-node.yaml  ci-php.yaml  ci-python.yaml  ci-ruby.yaml  ci-rust.yaml  ci-validate.yaml  ci-wasm.yaml  ci.yaml  comparative-benchmark.yaml  dart.yml  (+9 more)
audit-notes/: csharp.md  dart.md  elixir.md  glm-ocr-wiring-audit-2026-06-16.md  go.md  java.md  kotlin-android.md  other-bindings.md  python.md  r.md  ruby.md  swift.md  wasm.md  zig.md
comparative-benchmarks/: pyproject.toml
crates/kreuzberg-pdfium-render/: Cargo.toml  build.rs
crates/kreuzberg-pdfium-render/include/pdfium_5961/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6015/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6043/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6084/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6110/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6124/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6164/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6259/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6295/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6337/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6406/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6490/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6555/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6569/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6611/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6666/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6721/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_6996/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_7123/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_7215/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_7350/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_7543/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/include/pdfium_future/: rust-import-wrapper.h
crates/kreuzberg-pdfium-render/src/: bindings.rs  error.rs  lib.rs  pdfium.rs  utils.rs
crates/kreuzberg-pdfium-render/src/bindgen/: pdfium_6569.rs
crates/kreuzberg-pdfium-render/src/bindings/: dynamic_bindings.rs  static_bindings.rs  wasm_bindings.rs
crates/kreuzberg-pdfium-render/src/pdf/: appearance_mode.rs  bitmap.rs  document.rs  font.rs  link.rs  points.rs
crates/kreuzberg-pdfium-render/src/pdf/document/: bookmark.rs  form.rs  page.rs  pages.rs
crates/kreuzberg-pdfium-render/src/pdf/document/page/: annotation.rs  annotations.rs  field.rs  index_cache.rs  object.rs  objects.rs  paragraph.rs  render_config.rs  text.rs
crates/kreuzberg-pdfium-render/src/pdf/document/page/annotation/: popup.rs  private.rs  redacted.rs  variable_text.rs  widget.rs  xfa_widget.rs
crates/kreuzberg-pdfium-render/src/pdf/document/page/field/: combo.rs  list.rs  option.rs  options.rs  private.rs  radio.rs  text.rs
crates/kreuzberg-pdfium-render/src/pdf/document/page/object/: group.rs  image.rs  private.rs  text.rs  x_object_form.rs
crates/kreuzberg-pdfium-render/src/pdf/document/page/text/: char.rs  segment.rs
crates/kreuzberg-php/: Cargo.toml
crates/kreuzberg-php/src/: async_extraction.rs  extraction.rs  lib.rs  types.rs
crates/xberg-cli/: Cargo.toml
crates/xberg-cli/src/: input.rs  logging.rs  main.rs  style.rs
crates/xberg-cli/src/commands/: cache.rs  embed.rs  extract.rs  mod.rs  ner.rs  overrides.rs  server.rs  tree_sitter.rs
crates/xberg-cli/tests/: commands_test.rs  config_tests.rs  contract_cli.rs  e2e_config_test.rs  extract_envelope.rs
crates/xberg-gliner-candle/: Cargo.toml
crates/xberg-gliner-candle/src/: decode.rs  encoder.rs  lib.rs  lora.rs  model.rs  pipeline.rs  tests.rs
crates/xberg-gliner-candle/src/heads/: mod.rs  schema_gather.rs
crates/xberg-gliner-candle/tests/: smoke.rs  wasm_ner.rs
docker/: Dockerfile.cli  Dockerfile.core  Dockerfile.full  Dockerfile.manylinux-node  Dockerfile.musl-build  Dockerfile.musl-ffi  Dockerfile.musl-node  Dockerfile.musl-rustler  README.md  test-tessdata.sh
docs/: demo.html  features.md  index.md  llms.txt
docs-site/: astro.config.mjs  package.json  pnpm-lock.yaml
integrations/: README.md
schemas/: alef.schema.json
scripts/: README_GENERATOR.md  build_python_dev.sh  download_gmft_models.py  generate_readme.py  install-php-ext.sh  install.sh  readme_config.yaml  setup-php-ext-ini.sh  setup-swift-bridge.sh  stage_csharp_native_local.sh  stage_go_native_local.sh  sync_integration_versions.py  sync_versions.py  test_docker.sh
tests/: conftest.py  extraction_test.py  pandoc_test.py  pdf_test.py  tesseract_test.py  test_connector.py  test_pipeline.py
tools/tract-op-sweep/: Cargo.toml  README.md
(+3567 files in other folders)
