[package]
name = "kreuzberg-php"
version = "5.0.0-rc.1"
edition = "2024"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "pdf", "ocr", "text"]
categories = ["text-processing"]

# `ahash` is conditionally referenced: only when the umbrella crate exposes
# `AHashMap<Cow<str>, _>` parameters (the conditional `__*_ahash` shim rebuilds).
# `futures-util` is similarly conditional on streaming adapters being declared.
[package.metadata.cargo-machete]
ignored = []

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []

[dependencies]
ahash = "0.8"
async-trait = "0.1"
ext-php-rs = "0.15"
kreuzberg = { version = "5.0.0-rc.1", path = "../kreuzberg", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "mcp", "liter-llm", "quality"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
