[package]
name = "xberg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line interface for Xberg document intelligence"
license.workspace = true
repository.workspace = true
homepage = "https://xberg.io"
documentation = "https://docs.xberg.io"
keywords = ["document", "extraction", "cli", "tool", "parser"]
categories = ["command-line-utilities", "text-processing"]

[package.metadata.cargo-machete]
ignored = ["serde_toon_format"]

[[bin]]
name = "xberg"
path = "src/main.rs"

[features]
default = [
    "formats",
    "analysis",
    "core-cli",
    "embeddings",
    "html",
    "url-ingestion",
    "liter-llm",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "chunking-tokenizers",
    "tree-sitter",
]
pdf-surface = ["xberg/pdf"]
pdf-heuristic = ["pdf-surface"]
pdf-ocr = ["pdf-heuristic", "ocr-surface", "xberg/ocr"]
formats = ["pdf-surface", "xberg/formats"]
analysis = ["xberg/analysis"]
url-surface = []
core-cli = ["url-surface", "xberg/url-ingestion", "xberg/cli"]
# Internal compatibility aggregate. Before lean PDF profiles existed, every
# xberg-cli feature inherited these capabilities from the dependency declaration.
legacy-base = ["formats", "analysis", "core-cli", "ocr-surface"]
ort-bundled = ["legacy-base", "xberg/ort-bundled"]
# Load ONNX Runtime at runtime (dlopen) instead of static-linking a prebuilt.
# The x86_64-apple-darwin CLI is built with the normal default features PLUS
# this, so it keeps full feature parity with the aarch64 CLI: ort-sys
# `disable-linking` (pulled by load-dynamic) short-circuits its build script
# before the (nonexistent) x86_64-mac prebuilt is ever resolved. ort finds
# libonnxruntime.dylib relative to the executable, so the release tarball just
# ships the dylib next to the `xberg` binary — no ORT_DYLIB_PATH needed.
ort-dynamic = ["legacy-base", "xberg/ort-dynamic"]

# Native Intel macOS (x86_64-apple-darwin) platform aggregate. Passthrough to
# the xberg `macos-intel-target` set (full feature parity, ort loaded
# dynamically). Used by the bindings via alef target overrides; the CLI release
# build instead keeps its default features and adds `ort-dynamic` for exact
# parity with the aarch64 CLI.
macos-intel = [
    "legacy-base",
    "ocr-surface",
    "pdf-surface",
    "xberg/macos-intel-target",
]

# Dependency-free marker for OCR-capable CLI flags. Candle/VLM backends enable
# this without pulling the native Tesseract implementation.
ocr-surface = []
ocr = ["legacy-base", "ocr-surface", "xberg/ocr"]

api = ["legacy-base", "xberg/api"]
mcp = ["legacy-base", "xberg/mcp"]
mcp-http = ["legacy-base", "xberg/mcp-http"]
embeddings = ["legacy-base", "xberg/embeddings"]
paddle-ocr = ["legacy-base", "ocr-surface", "xberg/paddle-ocr"]
candle-ocr = ["legacy-base", "ocr-surface", "xberg/candle-ocr"]
candle-trocr = ["legacy-base", "ocr-surface", "xberg/candle-trocr"]
candle-paddleocr-vl = ["legacy-base", "ocr-surface", "xberg/candle-paddleocr-vl"]
candle-glm-ocr = ["legacy-base", "ocr-surface", "layout-detection", "xberg/candle-glm-ocr"]
candle-deepseek-ocr = ["legacy-base", "ocr-surface", "xberg/candle-deepseek-ocr"]
candle-vlm-ocr = ["legacy-base", "ocr-surface", "layout-detection", "xberg/candle-vlm-ocr"]
candle-cuda = ["legacy-base", "xberg/candle-cuda"]
candle-metal = ["legacy-base", "xberg/candle-metal"]
candle-accelerate = ["legacy-base", "xberg/candle-accelerate"]
candle-mkl = ["legacy-base", "xberg/candle-mkl"]
layout-detection = ["legacy-base", "xberg/layout-detection"]
chunking-tokenizers = ["legacy-base", "xberg/chunking-tokenizers"]
html = ["legacy-base", "xberg/html"]
url-ingestion = ["legacy-base", "url-surface", "xberg/url-ingestion"]
liter-llm = ["legacy-base", "ocr-surface", "xberg/liter-llm"]
# Page classification (issue #1298): pulls only `xberg/classification` (which
# depends on the already-enabled `liter-llm` HTTP path, no ORT/model deps), so
# containers built with `--features all` ship it. It stays opt-in at runtime —
# it runs only when a classification LLM config is supplied.
classification = ["legacy-base", "xberg/classification"]
tree-sitter = ["legacy-base", "xberg/tree-sitter", "dep:tree-sitter-language-pack"]
ner-onnx = ["legacy-base", "xberg/ner-onnx"]
heic = ["legacy-base", "xberg/heic"]
all = [
    "default",
    "api",
    "heic",
    "html",
    "url-ingestion",
    "mcp",
    "mcp-http",
    "chunking-tokenizers",
    "tree-sitter",
    "liter-llm",
    "classification",
]

[dependencies]

anstyle = "1"
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = "4.6"
serde = { workspace = true }
serde_json = { workspace = true }
serde_toon_format = { workspace = true }
# xberg-cli is native-only (never built for wasm32); restore the OS-dependent tokio features
# trimmed from the workspace-level baseline (see root Cargo.toml).
tokio = { workspace = true, features = ["process", "fs", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter-language-pack = { workspace = true, features = ["dynamic-loading", "download", "serde"], optional = true }
xberg = { workspace = true, features = ["tokio-runtime", "simd-utf8"] }

[dev-dependencies]
bytes = { workspace = true }
tempfile = { workspace = true }
ureq = { version = "3.3", features = ["json"] }
