[package]
name = "tract-op-sweep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://xberg.io"
publish = false

[[bin]]
name = "tract-op-sweep"
path = "src/main.rs"

[[bin]]
name = "paddle-parity-probe"
path = "src/bin/paddle_parity_probe.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ndarray = "0.17"
ort = { workspace = true, features = ["ndarray", "download-binaries", "tls-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tract-onnx = { workspace = true }
